# nou

./: .clang-tidy  .gitignore  .gitmodules  README.md  meson.build
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  dependabot.yml
include/nou/: network.hpp
include/nou/concepts/: activation_function.hpp  callback.hpp  complete_layer.hpp  connectable_layers.hpp  execution_policy.hpp  incomplete_layer.hpp  initializer.hpp  layer.hpp  loss_function.hpp  metric.hpp  optimizable.hpp  optimizer.hpp  propagatable.hpp
include/nou/core/: error.hpp  neuron.hpp  training_data_set.hpp
include/nou/layer/: dense_layer.hpp  input_layer.hpp
include/nou/type_traits/: empty_type.hpp  size.hpp  to_span.hpp
include/nou/utility/: algorithm.hpp  connect_layers.hpp
test/: meson.build
test/ut/: meson.build  network.cc
test/ut/core/: neuron.cc  training_data_set.cc
test/ut/layer/: dense_layer.cc  input_layer.cc
test/ut/utility/: algorithm.cc  connect_layers.cc
